Finalize pagination handling
NOTE: Missing to show proper range for last page, it should go "to"
data_returned

--- a/optimade.ipynb
+++ b/optimade.ipynb
@@ -24,7 +24,8 @@
     "from aiida import load_profile\n",
     "from aiidalab_optimade import OptimadeQueryWidget\n",
     "\n",
-    "load_profile(\"sohier_import_sqla\")\n",
+    "# load_profile(\"sohier_import_sqla\")\n",
+    "load_profile(\"aiidalab-optimade\")\n",
     "OptimadeQueryWidget()"
    ]
   },
@@ -39,9 +40,9 @@
  "metadata": {
   "file_extension": ".py",
   "kernelspec": {
-   "display_name": "Python 3.6.7 64-bit ('aiidalab_optimade': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python36764bitaiidalaboptimadevirtualenva89811b4f91b4c2b8b67a3e3f632554a"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -53,7 +54,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   },
   "mimetype": "text/x-python",
   "name": "python",
