Enable searching by pressing Return
Fix result range for last page.

--- a/optimade.ipynb
+++ b/optimade.ipynb
@@ -25,7 +25,8 @@
     "from aiidalab_optimade import OptimadeQueryWidget\n",
     "\n",
     "# load_profile(\"sohier_import_sqla\")\n",
-    "load_profile(\"aiidalab-optimade\")\n",
+    "# load_profile(\"aiidalab-optimade\")\n",
+    "load_profile(\"aiidalab\")\n",
     "OptimadeQueryWidget()"
    ]
   },
