--- a/optimade.ipynb
+++ b/optimade.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.6.7-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python36764bitaiidalaboptimadevirtualenva89811b4f91b4c2b8b67a3e3f632554a",
-   "display_name": "Python 3.6.7 64-bit ('aiidalab_optimade': virtualenv)"
-  }
- },
  "cells": [
   {
    "cell_type": "code",
@@ -35,15 +12,21 @@
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": "OptimadeQueryWidget(children=(Label(value='Search for a structure in an OPTiMaDe database'), OptimadeProviders…"
+      "text/plain": [
+       "OptimadeQueryWidget(children=(Label(value='Search for a structure in an OPTiMaDe database'), OptimadeProviders…"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
    "source": [
+    "from aiida import load_profile\n",
     "from aiidalab_optimade import OptimadeQueryWidget\n",
     "\n",
+    "# load_profile(\"sohier_import_sqla\")\n",
+    "# load_profile(\"aiidalab-optimade\")\n",
+    "load_profile(\"aiidalab\")\n",
     "OptimadeQueryWidget()"
    ]
   },
@@ -54,5 +37,32 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "file_extension": ".py",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.9"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
