--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -7,10 +7,52 @@
    "outputs": [],
    "source": [
     "from aiida import load_profile\n",
+    "from aiida.orm import StructureData\n",
     "from aiidalab_optimade import OptimadeQueryWidget\n",
+    "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
+    "from ipywidgets import dlink\n",
     "\n",
-    "load_profile(\"aiidalab\")\n",
-    "OptimadeQueryWidget()"
+    "load_profile(\"sohier_import\")\n",
+    "\n",
+    "optimade = OptimadeQueryWidget()\n",
+    "structure_viewer = StructureDataViewer()\n",
+    "\n",
+    "_ = dlink(\n",
+    "    (optimade, 'structure'), (structure_viewer, 'structure'),\n",
+    "    transform=lambda atoms: None if atoms is None else StructureData(ase=atoms)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OPTiMaDe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(optimade)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structure viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(structure_viewer)"
    ]
   }
  ],
@@ -30,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
