Initial concepts for summary sections

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -7,20 +7,17 @@
    "outputs": [],
    "source": [
     "from aiida import load_profile\n",
-    "from aiida.orm import StructureData\n",
-    "from aiidalab_optimade import OptimadeQueryWidget\n",
+    "from aiidalab_optimade import OptimadeQueryWidget, OptimadeResultsWidget\n",
     "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
     "from ipywidgets import dlink\n",
     "\n",
     "load_profile(\"sohier_import\")\n",
     "\n",
-    "optimade = OptimadeQueryWidget()\n",
+    "query = OptimadeQueryWidget()\n",
+    "summary = OptimadeResultsWidget()\n",
     "structure_viewer = StructureDataViewer()\n",
     "\n",
-    "_ = dlink(\n",
-    "    (optimade, 'structure'), (structure_viewer, 'structure'),\n",
-    "    transform=lambda atoms: None if atoms is None else StructureData(ase=atoms)\n",
-    ")"
+    "_ = dlink((query, 'structure'), (structure_viewer, 'structure'))"
    ]
   },
   {
@@ -31,19 +28,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(optimade)"
+    "display(query)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Structure viewer"
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structure viewer"
    ]
   },
   {
