Make provider-database summary a GridspecLayout

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -11,7 +11,7 @@
     "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
     "from ipywidgets import dlink\n",
     "\n",
-    "load_profile(\"sohier_import\")\n",
+    "load_profile(\"aiidalab_v20\")\n",
     "\n",
     "query = OptimadeQueryWidget()\n",
     "summary = OptimadeResultsWidget()\n",
@@ -92,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
