Introduce output summary for structures

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -17,6 +17,7 @@
     "summary = OptimadeResultsWidget()\n",
     "structure_viewer = StructureDataViewer()\n",
     "\n",
+    "_ = dlink((query, 'structure'), (summary, 'entity'))\n",
     "_ = dlink((query, 'structure'), (structure_viewer, 'structure'))"
    ]
   },
