--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -11,9 +11,9 @@
     "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
     "from ipywidgets import dlink\n",
     "\n",
-    "load_profile(\"aiidalab_optimade\")\n",
+    "load_profile(\"aiidalab_v20\")\n",
     "\n",
-    "query = OptimadeQueryWidget()\n",
+    "query = OptimadeQueryWidget(debug=True)\n",
     "summary = OptimadeResultsWidget()\n",
     "structure_viewer = StructureDataViewer()\n",
     "\n",
@@ -93,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
