--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -7,10 +7,73 @@
    "outputs": [],
    "source": [
     "from aiida import load_profile\n",
-    "from aiidalab_optimade import OptimadeQueryWidget\n",
+    "from aiidalab_optimade import OptimadeQueryWidget, OptimadeResultsWidget\n",
+    "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
+    "from ipywidgets import dlink\n",
     "\n",
-    "load_profile(\"aiidalab\")\n",
-    "OptimadeQueryWidget()"
+    "load_profile(\"aiidalab_optimade\")\n",
+    "\n",
+    "query = OptimadeQueryWidget(debug=False)\n",
+    "summary = OptimadeResultsWidget()\n",
+    "structure_viewer = StructureDataViewer()\n",
+    "\n",
+    "_ = dlink((query, 'structure'), (summary, 'entity'))\n",
+    "_ = dlink((query, 'structure'), (structure_viewer, 'structure'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OPTiMaDe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structure viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(structure_viewer)"
    ]
   }
  ],
@@ -30,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
