Use versioned base URLs for implementations
Have deployed implementation in debug mode as well as local
implementation.

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "load_profile(\"aiidalab_optimade\")\n",
     "\n",
-    "query = OptimadeQueryWidget(debug=False)\n",
+    "query = OptimadeQueryWidget(debug=True)\n",
     "summary = OptimadeResultsWidget()\n",
     "structure_viewer = StructureDataViewer()\n",
     "\n",
