Remove deprecated notebook and load AiiDA profile

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -7,13 +7,17 @@
    "outputs": [],
    "source": [
     "from aiida import load_profile\n",
+    "from aiida.common.exceptions import ProfileConfigurationError\n",
     "from aiidalab_optimade import OptimadeQueryWidget, OptimadeResultsWidget\n",
     "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
     "from ipywidgets import dlink\n",
     "\n",
-    "load_profile(\"aiidalab_optimade\")\n",
+    "try:\n",
+    "    load_profile(\"aiidalab_optimade\")\n",
+    "except ProfileConfigurationError:\n",
+    "    load_profile()\n",
     "\n",
-    "query = OptimadeQueryWidget(debug=True)\n",
+    "query = OptimadeQueryWidget()\n",
     "summary = OptimadeResultsWidget()\n",
     "structure_viewer = StructureDataViewer()\n",
     "\n",
