--- a/optimade.ipynb
+++ b/optimade.ipynb
@@ -22,11 +22,14 @@
    ],
    "source": [
     "from aiida import load_profile\n",
+    "from aiida.common.exceptions import ProfileConfigurationError\n",
     "from aiidalab_optimade import OptimadeQueryWidget\n",
     "\n",
-    "# load_profile(\"sohier_import_sqla\")\n",
-    "# load_profile(\"aiidalab-optimade\")\n",
-    "load_profile(\"aiidalab\")\n",
+    "try:\n",
+    "    load_profile(\"aiidalab_optimade\")\n",
+    "except ProfileConfigurationError:\n",
+    "    load_profile()\n",
+    "\n",
     "OptimadeQueryWidget()"
    ]
   },
@@ -55,7 +58,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.7"
   },
   "mimetype": "text/x-python",
   "name": "python",
