Use central Structure class
The central Structure class acts as a proxy for
optimade.models.StructureResource, as well as a lazy converter into
other structure classes and types.
At the moment a Structure can be converted into an AiiDA StructureData,
an ASE Atoms, and a pymatgen Structure/Molecule (depending on the
dimension_types, Structure for bulk 3D structures and Molecule for all
others).

The central Structure class is now used throughout the widget instead of
ASE Atoms and/or AiiDA StructureData.

--- a/OPTiMaDe general.ipynb
+++ b/OPTiMaDe general.ipynb
@@ -22,7 +22,7 @@
     "structure_viewer = StructureDataViewer()\n",
     "\n",
     "_ = dlink((query, 'structure'), (summary, 'entity'))\n",
-    "_ = dlink((query, 'structure'), (structure_viewer, 'structure'))"
+    "_ = dlink((query, 'structure'), (structure_viewer, 'structure'), transform=lambda structure: getattr(structure, \"get_ase\", None))"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
