Update for use with "vanilla" Jupyter/JupyterLab
Changed all names from OPTiMaDe to OPTIMADE.

Fine-tuned section headers' margin and padding.

Renamed files to remove redundant `optimade_` from the names.

--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -6,30 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aiida import load_profile\n",
-    "from aiida.common.exceptions import ProfileConfigurationError\n",
-    "from aiidalab_optimade import OptimadeQueryWidget, OptimadeResultsWidget\n",
-    "from aiidalab_widgets_base.viewers import StructureDataViewer\n",
-    "from ipywidgets import dlink\n",
-    "\n",
-    "try:\n",
-    "    load_profile(\"aiidalab_optimade\")\n",
-    "except ProfileConfigurationError:\n",
-    "    load_profile()\n",
+    "from aiidalab_optimade import OptimadeQueryWidget, OptimadeSummaryWidget\n",
+    "from ipywidgets import dlink, GridspecLayout, HTML\n",
     "\n",
     "query = OptimadeQueryWidget()\n",
-    "summary = OptimadeResultsWidget()\n",
-    "structure_viewer = StructureDataViewer()\n",
+    "summary = OptimadeSummaryWidget()\n",
     "\n",
-    "_ = dlink((query, 'structure'), (summary, 'entity'))\n",
-    "_ = dlink((query, 'structure'), (structure_viewer, 'structure'), transform=lambda structure: getattr(structure, \"get_ase\", None))"
+    "_ = dlink((query, 'structure'), (summary, 'entity'))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OPTiMaDe"
+    "# OPTIMADE"
    ]
   },
   {
@@ -63,22 +53,6 @@
    "source": [
     "display(summary)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Structure viewer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display(structure_viewer)"
-   ]
   }
  ],
  "metadata": {
@@ -97,9 +71,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
