New structure viewer widget using NGLViewer
Added dependencies for nglviewer and numpy. Upped the one for jupyter.

Split the query widget into two parts: Decide on database &
Filters+Query.
Added a (at the moment not functional) page-selecter for databases.

The new structure viewer will not work until a proper PDB format can be
provided.

--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -6,13 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aiidalab_optimade import OptimadeQueryWidget, OptimadeSummaryWidget\n",
-    "from ipywidgets import dlink, GridspecLayout, HTML\n",
+    "from aiidalab_optimade import OptimadeQueryProviderWidget, OptimadeQueryFilterWidget, OptimadeSummaryWidget\n",
+    "from ipywidgets import dlink, HTML, HTMLMath\n",
     "\n",
-    "query = OptimadeQueryWidget()\n",
+    "selector = OptimadeQueryProviderWidget()\n",
+    "filters = OptimadeQueryFilterWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
     "\n",
-    "_ = dlink((query, 'structure'), (summary, 'entity'))"
+    "_ = dlink((selector, 'database'), (filters, 'database'))\n",
+    "_ = dlink((filters, 'structure'), (summary, 'entity'))"
    ]
   },
   {
@@ -35,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(query)"
+    "display(selector)\n",
+    "display(filters)"
    ]
   },
   {
@@ -52,6 +55,24 @@
    "outputs": [],
    "source": [
     "display(summary)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PDB File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_output = HTML()\n",
+    "_ = dlink((filters, 'structure'), (file_output, 'value'), transform=lambda structure: structure.get_pdb.replace(\"\\n\", \"<br>\") if structure is not None else \"\")\n",
+    "display(file_output)"
    ]
   }
  ],
