Update stylings of text and move output data
The "Summary" section has been moved up alongside the newly separated
out OptimadeQueryFilterWidget, as a VBox with the NGLviewer on top and
the Summary tabs below.

Furthermore, the NGLViewer has gotten a black border around it.

--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from aiidalab_optimade import OptimadeQueryProviderWidget, OptimadeQueryFilterWidget, OptimadeSummaryWidget\n",
-    "from ipywidgets import dlink, HTML, HTMLMath\n",
+    "from ipywidgets import dlink, HTML, HTMLMath, Box\n",
     "\n",
     "selector = OptimadeQueryProviderWidget()\n",
     "filters = OptimadeQueryFilterWidget()\n",
@@ -38,15 +38,24 @@
    "outputs": [],
    "source": [
     "display(selector)\n",
-    "display(filters)"
+    "\n",
+    "filters_summary = Box(children=(filters, summary))\n",
+    "filters_summary.layout = {\n",
+    "    \"display\": \"flex\",\n",
+    "    \"flex-direction\": \"row\",\n",
+    "    \"flex-wrap\": \"wrap\",\n",
+    "    \"justify-content\": \"flex-start\",\n",
+    "    \"align-items\": \"flex-start\",\n",
+    "}\n",
+    "filters.layout.flex = \"2 1 auto\"\n",
+    "summary.layout.flex = \"1 1 auto\"\n",
+    "display(filters_summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Summary"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -54,15 +63,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(summary)"
+    "# display(summary)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## PDB File"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
