Add downloadability of structures in CIF and PDB
Update LICENSE to include mention of EPFL

--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "from aiidalab_optimade import OptimadeQueryProviderWidget, OptimadeQueryFilterWidget, OptimadeSummaryWidget\n",
-    "from ipywidgets import dlink, HTML, HTMLMath, Box\n",
+    "from ipywidgets import dlink, HTML, HTMLMath, GridspecLayout, HBox, Box\n",
+    "from IPython.display import display\n",
     "\n",
     "selector = OptimadeQueryProviderWidget()\n",
     "filters = OptimadeQueryFilterWidget()\n",
@@ -33,9 +34,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f1d3228576e04cf0b5bddecdc95d8f29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "OptimadeQueryProviderWidget(children=(ProviderImplementationChooser(children=(Dropdown(layout=Layout(width='au…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1be1b06dbf074464aee43561a9713479",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">Apply filte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(selector)\n",
     "\n",
@@ -49,45 +79,64 @@
     "}\n",
     "filters.layout.flex = \"2 1 auto\"\n",
     "summary.layout.flex = \"1 1 auto\"\n",
+    "\n",
+    "#filters_summary = GridspecLayout(1, 31)\n",
+    "#filters_summary[:, :17] = filters\n",
+    "#filters_summary[:, 17:] = summary\n",
+    "\n",
+    "#filters_summary = HBox(children=(filters, summary), layout={\"width\": \"100%\", \"height\": \"auto\"})\n",
+    "\n",
     "display(filters_summary)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5add3632d6904c699b30dcdc9fa15c65",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">Apply filte…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# display(summary)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# file_output = HTML()\n",
+    "# _ = dlink((filters, 'structure'), (file_output, 'value'), transform=lambda structure: structure.get_pdb.replace(\"\\n\", \"<br>\") if structure is not None else \"\")\n",
+    "# display(file_output)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "file_output = HTML()\n",
-    "_ = dlink((filters, 'structure'), (file_output, 'value'), transform=lambda structure: structure.get_pdb.replace(\"\\n\", \"<br>\") if structure is not None else \"\")\n",
-    "display(file_output)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.5 64-bit ('jupyter': virtualenv)",
    "language": "python",
-   "name": "python3"
+   "name": "python37564bitjupytervirtualenvb49a49bc685c45e9b5700717fed9db83"
   },
   "language_info": {
    "codemirror_mode": {
