--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Comment out this line to not show debug messages\n",
+    "#os.environ[\"OPTIMADE_CLIENT_DEBUG\"] = \"True\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -10,7 +22,7 @@
     "from ipywidgets import dlink, HTML, HTMLMath, GridspecLayout, HBox, Box\n",
     "from IPython.display import display\n",
     "\n",
-    "selector = OptimadeQueryProviderWidget()\n",
+    "selector = OptimadeQueryProviderWidget(database_limit=2)\n",
     "filters = OptimadeQueryFilterWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
     "\n",
@@ -22,7 +34,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# OPTIMADE"
+    "# OPTIMADE\n",
+    "\n"
    ]
   },
   {
@@ -69,67 +82,14 @@
    "source": [
     "display(selector)\n",
     "\n",
-    "filters_summary = Box(children=(filters, summary))\n",
-    "filters_summary.layout = {\n",
-    "    \"display\": \"flex\",\n",
-    "    \"flex-direction\": \"row\",\n",
-    "    \"flex-wrap\": \"wrap\",\n",
-    "    \"justify-content\": \"flex-start\",\n",
-    "    \"align-items\": \"flex-start\",\n",
-    "}\n",
-    "filters.layout.flex = \"2 1 auto\"\n",
-    "summary.layout.flex = \"1 1 auto\"\n",
-    "\n",
-    "#filters_summary = GridspecLayout(1, 31)\n",
-    "#filters_summary[:, :17] = filters\n",
-    "#filters_summary[:, 17:] = summary\n",
+    "filters_summary = GridspecLayout(1, 31)\n",
+    "filters_summary[:, :16] = filters\n",
+    "filters_summary[:, 17:] = summary\n",
     "\n",
     "#filters_summary = HBox(children=(filters, summary), layout={\"width\": \"100%\", \"height\": \"auto\"})\n",
     "\n",
     "display(filters_summary)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5add3632d6904c699b30dcdc9fa15c65",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">Apply filte…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# display(summary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# file_output = HTML()\n",
-    "# _ = dlink((filters, 'structure'), (file_output, 'value'), transform=lambda structure: structure.get_pdb.replace(\"\\n\", \"<br>\") if structure is not None else \"\")\n",
-    "# display(file_output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
