Add logos and app description header

--- a/OPTIMADE general.ipynb
+++ b/OPTIMADE general.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,35 +14,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d0f283294c8d4b29ace500d40105db2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from aiidalab_optimade import OptimadeQueryProviderWidget, OptimadeQueryFilterWidget, OptimadeSummaryWidget\n",
-    "from ipywidgets import dlink, HTML, HTMLMath, GridspecLayout, HBox, Box\n",
+    "from aiidalab_optimade import (\n",
+    "    HeaderDescription,\n",
+    "    OptimadeClientFAQ,\n",
+    "    OptimadeQueryProviderWidget,\n",
+    "    OptimadeQueryFilterWidget,\n",
+    "    OptimadeSummaryWidget,\n",
+    ")\n",
+    "from ipywidgets import dlink, GridspecLayout, HTML\n",
     "from IPython.display import display\n",
     "\n",
-    "selector = OptimadeQueryProviderWidget(database_limit=2)\n",
+    "selector = OptimadeQueryProviderWidget()\n",
     "filters = OptimadeQueryFilterWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
     "\n",
     "_ = dlink((selector, 'database'), (filters, 'database'))\n",
-    "_ = dlink((filters, 'structure'), (summary, 'entity'))"
+    "_ = dlink((filters, 'structure'), (summary, 'entity'))\n",
+    "\n",
+    "HeaderDescription()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# OPTIMADE\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Query"
+    "OptimadeClientFAQ()"
    ]
   },
   {
@@ -80,13 +97,13 @@
     }
    ],
    "source": [
+    "display(HTML('<h2 style=\"margin-below:0px;padding-below:0px;\">Query</h2>'))\n",
+    "\n",
     "display(selector)\n",
     "\n",
     "filters_summary = GridspecLayout(1, 31)\n",
     "filters_summary[:, :16] = filters\n",
     "filters_summary[:, 17:] = summary\n",
-    "\n",
-    "#filters_summary = HBox(children=(filters, summary), layout={\"width\": \"100%\", \"height\": \"auto\"})\n",
     "\n",
     "display(filters_summary)"
    ]
