New logging setup
Logging is performed with two handlers, one to a file (DEBUG level) with
a "normal" formatter, and another to an Output ipywidget with INFO level
as default, but can be set from the start to be at DEBUG level if the
appropriate environment variable is set, or it can be toggled on/off in
the wrapped OptimadeLog (Accordion) widget.

--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import os\n",
     "\n",
-    "# Comment out this line to not show debug messages\n",
+    "# This line will include DEBUG level log messages from the start of the app,\n",
+    "# as well as include a \"Local server\" as provider (at http://localhost:5000/optimade/v<MAJOR>),\n",
+    "# where <MAJOR> is the major version number of the currently supported OPTIMADE spec version.\n",
     "#os.environ[\"OPTIMADE_CLIENT_DEBUG\"] = \"True\""
    ]
   },
@@ -36,6 +38,7 @@
     "from aiidalab_optimade import (\n",
     "    HeaderDescription,\n",
     "    OptimadeClientFAQ,\n",
+    "    OptimadeLog,\n",
     "    OptimadeQueryProviderWidget,\n",
     "    OptimadeQueryFilterWidget,\n",
     "    OptimadeSummaryWidget,\n",
@@ -60,6 +63,15 @@
    "outputs": [],
    "source": [
     "OptimadeClientFAQ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OptimadeLog()"
    ]
   },
   {
