Functional report buttons
Since the ipywidgets do not support other HTML Button elements than of
type "button", is was necessary to "manually" create the report buttons
in an HTML widget.
The suggestion report button is simply a form + "submit" type button.
The bug report button is a bit more sophisticated, with a but of
JavaScript directly in the value of the "onclick" attribute.
It retrieves a truncated version of the debug logs and passes them
directly into an issue via GitHub's query parameters.

--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0f283294c8d4b29ace500d40105db2a",
+       "model_id": "8943950cc6564fada719f94162d6397b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "_ColormakerRegistry()"
+       "HeaderDescription(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\x1e\\x00\\x00\\x03K\\x08\\x…"
       ]
      },
      "metadata": {},
@@ -58,31 +58,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d3ac030cdf6485683d5b2b6d41a9a45",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "OptimadeClientFAQ(children=(HTML(value='<h4 style=\"font-weight:bold;\">Why is a provider from Materials-Consort…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "OptimadeClientFAQ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f487029ac38b404aa17481f8c881b3f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "OptimadeLog(children=(VBox(children=(Checkbox(value=False, description='Show DEBUG messages', indent=False), O…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "OptimadeLog()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1d3228576e04cf0b5bddecdc95d8f29",
+       "model_id": "570112f2c3e248de887cdccaf8c39091",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<h2 style=\"margin-below:0px;padding-below:0px;\">Query</h2>')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "361a51d138bb4c4887da62a0cdf76f8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,12 +140,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1be1b06dbf074464aee43561a9713479",
+       "model_id": "854f77f2025141559df74ee6803a7411",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">Apply filte…"
+       "GridspecLayout(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">A…"
       ]
      },
      "metadata": {},
@@ -119,6 +163,13 @@
     "\n",
     "display(filters_summary)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
