--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -16,18 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8943950cc6564fada719f94162d6397b",
+       "model_id": "eb6ce49431104ed787478a75c603232c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HeaderDescription(children=(Image(value=b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHDR\\x00\\x00\\t\\x1e\\x00\\x00\\x03K\\x08\\x…"
+       "_ColormakerRegistry()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eff01e6ce24e44c18dda08bf792aaef2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HeaderDescription(children=(ReportLogger(value=\"<input type='hidden' id='report_log' value='%3Cdetails%3E%0A++…"
       ]
      },
      "metadata": {},
