Split results dropdown and page selector out
Separate "widget" for the results dropdown and page selector widget.

--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -55,17 +55,24 @@
     "    OptimadeLog,\n",
     "    OptimadeQueryProviderWidget,\n",
     "    OptimadeQueryFilterWidget,\n",
+    "    OptimadeStructureResultsWidget,\n",
     "    OptimadeSummaryWidget,\n",
     ")\n",
-    "from ipywidgets import dlink, GridspecLayout, HTML\n",
+    "from ipywidgets import dlink, GridspecLayout, HTML, VBox\n",
     "from IPython.display import display\n",
     "\n",
     "selector = OptimadeQueryProviderWidget()\n",
     "filters = OptimadeQueryFilterWidget()\n",
+    "results = OptimadeStructureResultsWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
     "\n",
     "_ = dlink((selector, 'database'), (filters, 'database'))\n",
-    "_ = dlink((filters, 'structure'), (summary, 'entity'))\n",
+    "_ = dlink((selector, 'database'), (results, 'base_url'), transform=lambda database: getattr(database[1], 'base_url', None) )\n",
+    "_ = dlink((filters, 'optimade_filter'), (results, 'optimade_filter'))\n",
+    "_ = dlink((filters, 'structures_response'), (results, 'new_searched_response'))\n",
+    "_ = dlink((results, 'freeze_filters'), (filters, 'freeze_filters'))\n",
+    "_ = dlink((results, 'unfreeze_filters'), (filters, 'unfreeze_filters'))\n",
+    "_ = dlink((results, 'structure'), (summary, 'entity'))\n",
     "\n",
     "HeaderDescription()"
    ]
@@ -167,15 +174,15 @@
     }
    ],
    "source": [
-    "display(HTML('<h2 style=\"margin-below:0px;padding-below:0px;\">Query</h2>'))\n",
-    "\n",
+    "filters_header = HTML('<h3 style=\"margin-bottom:0px;padding-bottom:0px;\">Query</h3>')\n",
+    "results_header = HTML('<h3 style=\"margin-bottom:0px;padding-bottom:0px;\">Results</h3>')\n",
     "display(selector)\n",
     "\n",
-    "filters_summary = GridspecLayout(1, 31)\n",
-    "filters_summary[:, :16] = filters\n",
-    "filters_summary[:, 17:] = summary\n",
+    "filters_results_summary = GridspecLayout(1, 31)\n",
+    "filters_results_summary[:, :16] = VBox(children=(filters_header, filters, results_header, results), layout={\"width\": \"100%\", \"height\": \"100%\"})\n",
+    "filters_results_summary[:, 17:] = VBox(children=(summary,), layout={\"width\": \"100%\", \"height\": \"100%\"})\n",
     "\n",
-    "display(filters_summary)"
+    "display(filters_results_summary)"
    ]
   },
   {
