Freeze also selector dropdowns with filters

--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -67,6 +67,8 @@
     "summary = OptimadeSummaryWidget()\n",
     "\n",
     "_ = dlink((selector, 'database'), (filters, 'database'))\n",
+    "_ = dlink((filters, 'freeze_selector'), (selector, 'freeze_selector'))\n",
+    "_ = dlink((filters, 'unfreeze_selector'), (selector, 'unfreeze_selector'))\n",
     "_ = dlink((selector, 'database'), (results, 'base_url'), transform=lambda database: getattr(database[1], 'base_url', None) )\n",
     "_ = dlink((filters, 'optimade_filter'), (results, 'optimade_filter'))\n",
     "_ = dlink((filters, 'structures_response'), (results, 'new_searched_response'))\n",
