Reset results dropdown for new database

--- a/OPTIMADE_general.ipynb
+++ b/OPTIMADE_general.ipynb
@@ -72,6 +72,7 @@
     "_ = dlink((selector, 'database'), (results, 'base_url'), transform=lambda database: getattr(database[1], 'base_url', None) )\n",
     "_ = dlink((filters, 'optimade_filter'), (results, 'optimade_filter'))\n",
     "_ = dlink((filters, 'structures_response'), (results, 'new_searched_response'))\n",
+    "_ = dlink((filters, 'reset_results'), (results, 'reset_results'))\n",
     "_ = dlink((results, 'freeze_filters'), (filters, 'freeze_filters'))\n",
     "_ = dlink((results, 'unfreeze_filters'), (filters, 'unfreeze_filters'))\n",
     "_ = dlink((results, 'structure'), (summary, 'entity'))\n",
