Correctly set kernel to python3

--- a/OPTIMADE Client.ipynb
+++ b/OPTIMADE Client.ipynb
@@ -22,13 +22,11 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb6ce49431104ed787478a75c603232c",
+       "model_id": "fa8d5fed5612439eb41ba72e4865c3df",
        "version_major": 2,
        "version_minor": 0
       },
-      "text/plain": [
-       "_ColormakerRegistry()"
-      ]
+      "text/plain": []
      },
      "metadata": {},
      "output_type": "display_data"
@@ -36,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eff01e6ce24e44c18dda08bf792aaef2",
+       "model_id": "248ff428d6f64205bf08e42179b47b86",
        "version_major": 2,
        "version_minor": 0
       },
@@ -72,13 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3ac030cdf6485683d5b2b6d41a9a45",
+       "model_id": "52dbfbd90c2341d2bcea60105284ac70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,13 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f487029ac38b404aa17481f8c881b3f3",
+       "model_id": "1b7cc3b7ba634a9d9e6f91b4fec334ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,13 +118,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570112f2c3e248de887cdccaf8c39091",
+       "model_id": "5c41c44c31194980b946964546cc9b81",
        "version_major": 2,
        "version_minor": 0
       },
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "361a51d138bb4c4887da62a0cdf76f8a",
+       "model_id": "c1204af5b58740be9f5293195577dfce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "854f77f2025141559df74ee6803a7411",
+       "model_id": "8f00a400c162477f9d6de9efb22b77e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('jupyter': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitjupytervirtualenvb49a49bc685c45e9b5700717fed9db83"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
