--- a/OPTIMADE Client.ipynb
+++ b/OPTIMADE Client.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "from aiidalab_optimade import (\n",
+    "from optimade_client import (\n",
     "    HeaderDescription,\n",
     "    OptimadeClientFAQ,\n",
     "    OptimadeLog,\n",
