Update setup information for PyPI
Add MANIFEST.in, remove `aiidalab` extra

Update setup and README

Install scipy explicitly using `--no-binary :all:`.
Update README with relevant information.
Make binder's `requirements.txt` a symlink to the root one.
Update MaterialsCloud badge to read `Materials Cloud Tool`.

Use `develop` branch instead of `v3` tag for badges.

--- a/OPTIMADE Client.ipynb
+++ b/OPTIMADE Client.ipynb
@@ -188,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.5 64-bit ('jupyter': virtualenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python37564bitjupytervirtualenvb49a49bc685c45e9b5700717fed9db83"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
