Add parameter for skipping/disabling providers+dbs
This makes it possible to skip specific providers (based on their `id`).

It also makes it possible to skip specific databases (based on their
`id`) for any provider.

The value must be a dict, where the keys are the provider name (NB! Not
id) and the values are a list of child database ids.

--- a/OPTIMADE-Client.ipynb
+++ b/OPTIMADE-Client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,38 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb6ce49431104ed787478a75c603232c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "_ColormakerRegistry()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eff01e6ce24e44c18dda08bf792aaef2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HeaderDescription(children=(ReportLogger(value=\"<input type='hidden' id='report_log' value='%3Cdetails%3E%0A++…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from optimade_client import (\n",
     "    HeaderDescription,\n",
@@ -60,7 +31,15 @@
     "from ipywidgets import dlink, GridspecLayout, HTML\n",
     "from IPython.display import display\n",
     "\n",
-    "selector = OptimadeQueryProviderWidget()\n",
+    "# NOTE: Temporarily disable providers NOT properly satisfying the OPTIMADE specification\n",
+    "# Follow issue #206: https://github.com/CasperWA/voila-optimade-client/issues/206\n",
+    "# For omdb: Follow issue #246: https://github.com/CasperWA/voila-optimade-client/issues/246\n",
+    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\"]\n",
+    "\n",
+    "selector = OptimadeQueryProviderWidget(\n",
+    "    disable_providers=disable_providers,\n",
+    "    skip_providers=[\"exmpl\", \"optimade\", \"aiida\"],\n",
+    ")\n",
     "filters = OptimadeQueryFilterWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
     "\n",
@@ -72,100 +51,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3ac030cdf6485683d5b2b6d41a9a45",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "OptimadeClientFAQ(children=(HTML(value='<h4 style=\"font-weight:bold;\">Why is a provider from Materials-Consort…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "OptimadeClientFAQ()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f487029ac38b404aa17481f8c881b3f3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "OptimadeLog(children=(VBox(children=(Checkbox(value=False, description='Show DEBUG messages', indent=False), O…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "OptimadeLog()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570112f2c3e248de887cdccaf8c39091",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='<h2 style=\"margin-below:0px;padding-below:0px;\">Query</h2>')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "361a51d138bb4c4887da62a0cdf76f8a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "OptimadeQueryProviderWidget(children=(ProviderImplementationChooser(children=(Dropdown(layout=Layout(width='au…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "854f77f2025141559df74ee6803a7411",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GridspecLayout(children=(OptimadeQueryFilterWidget(children=(HTML(value='<h4 style=\"margin:0px;padding:0px;\">A…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(HTML('<h2 style=\"margin-below:0px;padding-below:0px;\">Query a provider\\'s database</h2>'))\n",
     "\n",
