Disable MPDS provider
They are very specific concerning page_limit - this is fine, but the
implementation also doesn't support the ANY filter operator used to
filter out `"assemblies"` structures.

In attempting to align with MPDS some minor corrections were made.

--- a/OPTIMADE-Client.ipynb
+++ b/OPTIMADE-Client.ipynb
@@ -34,7 +34,7 @@
     "# NOTE: Temporarily disable providers NOT properly satisfying the OPTIMADE specification\n",
     "# Follow issue #206: https://github.com/CasperWA/voila-optimade-client/issues/206\n",
     "# For omdb: Follow issue #246: https://github.com/CasperWA/voila-optimade-client/issues/246\n",
-    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\"]\n",
+    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\", \"mpds\"]\n",
     "\n",
     "selector = OptimadeQueryProviderWidget(\n",
     "    disable_providers=disable_providers,\n",
