Loosen requirements for AiiDAlab
Allow earlier versions of nglview and requests.

Update and unify notebook taken from aiidalab-optimade repo.

--- a/OPTIMADE-Client.ipynb
+++ b/OPTIMADE-Client.ipynb
@@ -3,22 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import os\n",
+    "# import os\n",
     "\n",
     "# This line will include DEBUG level log messages from the start of the app,\n",
     "# as well as include a \"Local server\" as provider (at http://localhost:5000/optimade/v<MAJOR>),\n",
     "# where <MAJOR> is the major version number of the currently supported OPTIMADE spec version.\n",
     "#os.environ[\"OPTIMADE_CLIENT_DEBUG\"] = \"True\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from optimade_client import (\n",
     "    HeaderDescription,\n",
@@ -34,11 +32,29 @@
     "# NOTE: Temporarily disable providers NOT properly satisfying the OPTIMADE specification\n",
     "# Follow issue #206: https://github.com/CasperWA/voila-optimade-client/issues/206\n",
     "# For omdb: Follow issue #246: https://github.com/CasperWA/voila-optimade-client/issues/246\n",
-    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\", \"mpds\"]\n",
+    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\", \"httk\", \"mpds\", \"necro\"]\n",
+    "# Curate and group Materials Cloud databases\n",
+    "skip_databases = {\"Materials Cloud\": [\"li-ion-conductors\"]}\n",
+    "database_grouping = {\n",
+    "    \"Materials Cloud\": {\n",
+    "        \"General\": [\"curated-cofs\"],\n",
+    "        \"Projects\": [\n",
+    "            \"2dstructures\",\n",
+    "            \"2dtopo\",\n",
+    "            \"pyrene-mofs\",\n",
+    "            \"scdm\",\n",
+    "            \"sssp\",\n",
+    "            \"stoceriaitf\",\n",
+    "            \"tc-applicability\",\n",
+    "            \"threedd\",\n",
+    "        ]}\n",
+    "}\n",
     "\n",
     "selector = OptimadeQueryProviderWidget(\n",
     "    disable_providers=disable_providers,\n",
     "    skip_providers=[\"exmpl\", \"optimade\", \"aiida\"],\n",
+    "    skip_databases=skip_databases,\n",
+    "    provider_database_groupings=database_grouping,\n",
     ")\n",
     "filters = OptimadeQueryFilterWidget()\n",
     "summary = OptimadeSummaryWidget()\n",
@@ -47,31 +63,31 @@
     "_ = dlink((filters, 'structure'), (summary, 'entity'))\n",
     "\n",
     "HeaderDescription()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "OptimadeClientFAQ()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "OptimadeLog()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "display(HTML('<h2 style=\"margin-below:0px;padding-below:0px;\">Query a provider\\'s database</h2>'))\n",
     "\n",
@@ -82,7 +98,9 @@
     "filters_summary[:, 17:] = summary\n",
     "\n",
     "display(filters_summary)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
