Update disabled providers + page_limit
Enable "omdb" and "httk".
Disable "jarvis".

Set default `page_limit` to 25.

Fix issues where `species` is not provided.
Fix issues where there are no sorting options.

--- a/OPTIMADE-Client.ipynb
+++ b/OPTIMADE-Client.ipynb
@@ -32,7 +32,17 @@
     "# NOTE: Temporarily disable providers NOT properly satisfying the OPTIMADE specification\n",
     "# Follow issue #206: https://github.com/CasperWA/voila-optimade-client/issues/206\n",
     "# For omdb: Follow issue #246: https://github.com/CasperWA/voila-optimade-client/issues/246\n",
-    "disable_providers = [\"cod\", \"tcod\", \"nmd\", \"omdb\", \"oqmd\", \"aflow\", \"matcloud\", \"httk\", \"mpds\", \"necro\"]\n",
+    "disable_providers = [\n",
+    "    \"cod\",\n",
+    "    \"tcod\",\n",
+    "    \"nmd\",\n",
+    "    \"oqmd\",\n",
+    "    \"aflow\",\n",
+    "    \"matcloud\",\n",
+    "    \"mpds\",\n",
+    "    \"necro\",\n",
+    "    \"jarvis\",\n",
+    "]\n",
     "# Curate and group Materials Cloud databases\n",
     "skip_databases = {\"Materials Cloud\": [\"li-ion-conductors\"]}\n",
     "database_grouping = {\n",
