Remove threedd and add mc3d-structures

--- a/OPTIMADE-Client.ipynb
+++ b/OPTIMADE-Client.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# import os\n",
     "\n",
@@ -10,13 +12,13 @@
     "# as well as include a \"Local server\" as provider (at http://localhost:5000/optimade/v<MAJOR>),\n",
     "# where <MAJOR> is the major version number of the currently supported OPTIMADE spec version.\n",
     "#os.environ[\"OPTIMADE_CLIENT_DEBUG\"] = \"True\""
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from optimade_client import (\n",
     "    HeaderDescription,\n",
@@ -44,7 +46,7 @@
     "    \"jarvis\",\n",
     "]\n",
     "# Curate and group Materials Cloud databases\n",
-    "skip_databases = {\"Materials Cloud\": [\"li-ion-conductors\"]}\n",
+    "skip_databases = {\"Materials Cloud\": [\"li-ion-conductors\", \"threedd\"]}\n",
     "database_grouping = {\n",
     "    \"Materials Cloud\": {\n",
     "        \"General\": [\"curated-cofs\"],\n",
@@ -53,10 +55,11 @@
     "            \"2dtopo\",\n",
     "            \"pyrene-mofs\",\n",
     "            \"scdm\",\n",
-    "            \"sssp\",\n",
+    "            \"sssp\"\n",
     "            \"stoceriaitf\",\n",
     "            \"tc-applicability\",\n",
-    "            \"threedd\",\n",
+    "            \"mc3d-structures\",\n",
+    "            \"tin-antimony-sulfoiodide\",\n",
     "        ]}\n",
     "}\n",
     "\n",
@@ -73,38 +76,36 @@
     "_ = dlink((filters, 'structure'), (summary, 'entity'))\n",
     "\n",
     "HeaderDescription()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "OptimadeClientFAQ()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "OptimadeLog()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "display(HTML('<h2 style=\"margin-below:0px;padding-below:0px;\">Query a provider\\'s database</h2>'))\n",
     "\n",
     "display(selector, filters, summary)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
